2005-04-26  Albert Chu  <chu11@llnl.gov>

	* Continued libcerebro updown library work.

	* Fixed packet unmarshalling bugs in cerebrod.

	* Fixed various corner case bugs in cerebrod server.
	
2005-04-25  Albert Chu  <chu11@llnl.gov>

	* Added support to search for arbitrary modules rather than only
	those defined.

	* Various build fixes.

	* Continued code cleanup and minor bug fixing.

	* Begin work on cerebro updown API.
	
2005-04-22  Albert Chu  <chu11@llnl.gov>

	* src/libcerebro/cerebrod_config_module.h: Renamed to
	cerebro_config_module.h.  All variable names changed/adjusted
	appropriately.

	* Reworked cerebrod based on variable name changes and header file
	renaming.

	* Various re-work, slight design changes, and code cleanup to
	prepare for libcerebro updown library.

	* cerebro.spec.in: Updated for builds.

	* Fixed distcheck errors throughout.
	
2005-04-21  Albert Chu  <chu11@llnl.gov>

	* src/libcerebro/cerebro_error.h, src/libcerebro/cerebro_error.c:
	New files.

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c:
	Removed files.
	
	Reworked error output based on new cerebro_error library API.

	Code cleanup throughout.

	Added mapping to cerebrod and modules.
	
2005-04-20  Albert Chu  <chu11@llnl.gov>

	Partitioned clusterlist and config modules into separate dir.
	Major Changes throughout.
	
2005-04-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_init): Added genders indexing.

	* config/ac_gendersllnl.m4: Check for genders indexing.

	* src/libcommon/Makefile.am: Put libwrappers and libcommon back
	into just libcommon.

	* src/cerebrod/Makefile.am,
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c,
	src/cerebrod/cerebrod_clusterlist_genders.c,
	src/cerebrod/cerebrod_clusterlist_hostsfile.c,
	src/cerebrod/cerebrod_clusterlist_none.c,
	src/cerebrod/cerebrod_clusterlist_util.h,
	src/cerebrod/cerebrod_clusterlist_utilc,
	src/cerebrod/cerebrod_clusterlist_genders_util.h,