@@ -1,3 +1,7 @@
+2005-04-27  Albert Chu  <chu11@llnl.gov>
+
+	* Finished first round of libcerebro updown API.
+	
 2005-04-26  Albert Chu  <chu11@llnl.gov>
 
 	* Continued libcerebro updown library work.
